# oneShotTranscoder

./: .gitignore  BUILD.md  INSTALLER.md  LICENSE  NOTICE.md  README.md  THIRD_PARTY_LICENSES.md  build.bat  build.py  build.sh  environment.yml  implementation-plan.mdc  installer.iss  installer.nsi  launcher.py  modify_build.py  pyinstaller_wrapper.py  pyproject.toml  setup.py  test_pgsrip.py  transcode.bat  transcode.spec  transcode_build.spec  transcode_full.spec  transcode_lightweight.spec
cursor_project_rules/: README.md  patterns.md
hooks/: hook-numpy.py  pyi_rth_importlib_metadata.py
pkg_scripts/: postinstall  postuninstall
tests/: test_media_patterns.py
transcoder/: __init__.py  compatibility.py  config.py  constants.py  dependency_manager.py  exceptions.py  ffmpeg.py  language.py  license.py  main.py  media_patterns.py  metadata.py  subtitles.py  transcode.py  utils.py
