[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcoder"
version = "0.1.0"
description = "Transcoder project"
requires-python = ">=3.9"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "easyocr",
    "opencv-python",
    "babelfish",
    "pgsrip",
    "numpy",
    "torch",
]

[project.scripts]
transcode = "transcoder.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["transcoder*"]

